# hcs_cms

./: .gitignore  README.md  docker-compose.yml  project_understand.md
backend/: .env.example  Dockerfile  fix_db.py  fix_migrations.py  manage.py  requirements.txt
backend/apps/accounts/: CSRF_AND_SPAS.md  admin.py  models.py  (+15 more)
backend/apps/drf_sso_resource/: README.md  __init__.py  admin.py  apps.py  authentication.py  conf.py  exceptions.py  models.py  permissions.py  pyproject.toml  signals.py  tests.py  user_sync.py
backend/apps/drf_sso_resource/migrations/: 0001_initial.py
backend/config/: case_type.csv  document_index.json  document_index_original_backup.json  new_filing_document_index.json  pagination.py  urls.py
docs/: HCS_CMS_20_Sprint_Plan.md  HCS_CMS_Gantt_One_Page_Summary.md  HCS_CMS_Project_Manager_Checklist.md  HCS_CMS_Project_Timeline.md  HCS_CMS_SRS_Burndown.csv  HCS_CMS_SRS_Gantt.csv  HCS_CMS_Tech_Stack_Decision.md  README.md  SRS_for_CMS_extracted.txt  courtroom_flow_schema_changes.md  db_migration_sequence_runbook.md  usecases.md
frontend/: .gitignore  Dockerfile  angular.json  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend-v2/: README.md  angular.json  package-lock.json  package.json
frontend-v2/src/: index.html  styles.css
frontend/src/: index.html  styles.css  styles.scss  typings.d.ts
go_gin_backend/: .env.example  .gitignore  Makefile  README.md  go.mod  go.sum
react_frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
react_frontend/src/: index.css  main.tsx
(+813 files in other folders)
