[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drf-sso-resource"
version = "1.0.0"
description = "Reusable Django app that turns any DRF project into an OAuth2/OIDC resource server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["django", "drf", "oauth2", "sso", "oidc", "resource-server"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
]

dependencies = [
    "Django>=4.2",
    "djangorestframework>=3.14",
    "requests>=2.28",
    "urllib3>=1.26",
]

[project.optional-dependencies]
# Include if you use django-oauth-toolkit as the authorisation server too
dot = ["django-oauth-toolkit>=2.0"]
# Include for full developer tooling
dev = [
    "pytest-django>=4.8",
    "pytest>=8",
    "factory-boy>=3.3",
    "responses>=0.25",
]

[tool.setuptools]
packages = ["drf_sso_resource", "drf_sso_resource.migrations"]

[tool.setuptools.package-dir]
drf_sso_resource = "."

[tool.pytest.ini_options]
python_files = ["test_*.py"]
